--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "philtweir.github.io/st-columbas-day/"
+baseURL = "https://philtweir.github.io/st-columbas-day/"
 languageCode = "en-gb"
 title = "St Columba's Day, Belfast"
 theme = "massively"
